fixed more spacing in global front and graduate

--- a/sites/all/themes/wander/src/sass/partials/_layout.scss
+++ b/sites/all/themes/wander/src/sass/partials/_layout.scss
@@ -80,7 +80,7 @@ img {
 
 .hero {
   position: relative;
-  height: 90vh;
+  height: 80vh;
   padding: 0;
   overflow: hidden;
   z-index: -100;
