--- a/sites/all/themes/wander/src/sass/partials/layouts/_front.scss
+++ b/sites/all/themes/wander/src/sass/partials/layouts/_front.scss
@@ -7,7 +7,7 @@
   .content {
     width: 90%;
     max-width: 900px;
-    margin: 50px auto 100px;
+    margin: 0 auto 100px;
   }
 
   p:first-child {
@@ -25,7 +25,7 @@
   .front {
 
     .content {
-      margin: 100px auto 150px;
+      margin: 0 auto 150px;
     }
     
     p {
