--- a/sites/all/themes/wander/src/sass/partials/layouts/_graduate.scss
+++ b/sites/all/themes/wander/src/sass/partials/layouts/_graduate.scss
@@ -1,5 +1,9 @@
 .node-type-graduate {
 
+  .container {
+    margin: 0 auto 150px;
+  }
+
   .hero,
   h1,
   label {
